# cookbook

./: LICENSE  pyproject.toml
demos/polars-nested-data/: README.md
demos/polars/arrow-simplified/: README.md
demos/polars/polars-nested-data/: README.md
demos/polars/polars-style-and-syntax/: README.md
