[project]
name = "cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "isal>=1.8.0",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "orjson>=3.11.5",
    "polars>=1.36.1",
    "pydantic>=2.12.5",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "zstd>=1.5.7.2",
]
